# SpellChecker

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  README.md  RESOURCES.vcxproj  RESOURCES.vcxproj.filters  SpellChecker.sln  SpellChecker.vcxproj  SpellChecker.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
SpellChecker/: SpellChecker.vcxproj  SpellChecker.vcxproj.filters  Spellchecker.cpp
SpellChecker/x64/Debug/: vc142.idb
SpellChecker/x64/Debug/SpellChecker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpellChecker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SpellChecker/x64/Release/: SpellChecker.exe.recipe
SpellChecker/x64/Release/SpellChecker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpellChecker.lastbuildstate  SpellChecker.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: Spellchecker.cpp
x64/Debug/: SpellChecker.ilk
x64/Release/: SpellChecker.iobj  SpellChecker.ipdb
